# Safe-Synthesizer

./: .copyrightignore  .cursorignore  .dockerignore  .envrc  .gitignore  .mise.toml  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  STYLE_GUIDE.md  THIRD_PARTY.md  design.md  gen_ref_pages.py  index.html  mise.toml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  ruff.toml  sitemap.xml
.agents/: README.md
.claude/: README.md  settings.json
.claude/commands/: bootstrap.md  build-docs.md  build-wheel.md  format.md  gpu-test.md  lint.md  pre-commit.md  start-docs-server.md  sync-nmp.md  test-ci-container.md  test-sdk-related.md  test-slow.md  unit-test.md
.cursor/: README.md  hooks.json  sandbox.json  setup-worktree.sh
.cursor/agents/: verifier.md
.cursor/hooks/: audit.sh  enforce-signoff.sh  read_env.sh  session_context.sh
.cursor/rules/: agent-markdown-style.mdc  claude-commands.mdc  repo-navigation.mdc  writing-docs.mdc
.cursor/skills/: configurator  deslop  diagnose-deps  diagnose-failures  docker  git-worktrees  github-cli  pydantic  python-observability  python-stdlib-patterns  python-testing-patterns  python-typing  skill-audit  sync-agent-config  sync-with-nmp  usage  uv-build  verify-repo-statements
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copy-pr-bot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  development-task.yml  feature-request.yml
.github/workflows/: README.md  ci-checks.yml  ci.yml  clean-pr-body.yml  conventional-commit.yml  copyright-check.yml  dco-assistant.yml  dependabot-sync-lock.yml  dev-wheel.yml  docs.yml  gpu-tests.yml  internal-release.yml  release.yml  secrets-detector.yml
architecture/design/: index.html
blog/: index.html
blog/welcome-to-the-nemo-safe-synthesizer-dev-notes/: index.html
containers/: Dockerfile.cuda  Dockerfile.cuda-aarch64  Dockerfile.test_ci  README.md  entrypoint.sh
contributing/: index.html
css/: mkdocstrings.css
developer-guide/architecture/: index.html
developer-guide/docker/: index.html
developer-guide/example-generation/: index.html
docs/: DGX_SPARK.md  gen_ref_pages.py  index.md  security.md  third-party.md
docs/architecture/: design.md
docs/blog/: index.md
docs/contributing/: index.md
docs/css/: mkdocstrings.css  style.css
docs/developer-guide/: architecture.md  contributing.md  docker.md  example-generation.md
docs/getting-started/: installation.md  quickstart.md
docs/js/: mathjax.js
docs/product-overview/: data-synthesis.md  data_synthesis.md  evaluation.md  pii_replacement.md  pipeline.md
docs/stylesheets/: extra.css
docs/tutorials/: differential-privacy.ipynb  index.md  nss-101-notebook.ipynb  safe-synthesizer-101.ipynb
docs/user-guide/: cli.md  configuration.md  data-quality.md  docker.md  environment.md  evaluating-data.md  evaluation.md  example-generation.md  getting-started.md  installation.md  overview.md  parameters.md  pipeline-stages.md  pipeline.md  privacy.md  running.md  sdk.md  troubleshooting.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
js/: toc-toggle.js
product-overview/data-synthesis/: index.html
product-overview/data_synthesis/: index.html
product-overview/evaluation/: index.html
product-overview/pii_replacement/: index.html
product-overview/pipeline/: index.html
reference/SUMMARY/: index.html
script/: sync-from-mr.sh
script/slurm/: EXPERIMENT_GUIDE.md  README.md  collect_nss_results.py  dp.yaml  dp_usg_guidance.yaml  env_variables.sh  nss_top.py  slurm_nss_matrix.sh  slurm_srun.sh  submit_single_dataset.sh  submit_slurm_jobs.sh  unsloth.yaml
search/: search_index.json
src/nemo_safe_synthesizer/: CITATION.md  TIMESERIES_README.md  __main__.py  defaults.py  errors.py  observability.py  package_info.py  results.py  utils.py
tests/: AGENTS.md  TESTING.md  conftest.py  nss_pii_replacer_test.py
tests/cli/: conftest.py  test_artifact_structure.py  test_cli.py  test_datasets.py  test_run.py  test_settings.py  test_utils.py  test_wandb_setup.py
tests/config/: conftest.py  test_autoconfig.py  test_nss_config.py  test_parameters.py
tests/configurator/: test_pydantic_click_options.py  test_validators.py
tests/data_processing/: conftest.py  test_assembler.py  test_records.py  test_stats.py
tests/e2e/: conftest.py  test_dataset_config.py  test_safe_synthesizer.py
tests/evaluation/: conftest.py  test_nearest_neighbors.py  test_render.py
tests/generation/: conftest.py  test_batch.py  test_generation.py  test_processors.py  test_regex_manager.py  test_timeseries_backend.py  test_vllm_backend.py  test_vllm_shutdown.py
tests/holdout/: test_holdout.py
tests/llm/: test_metadata.py
tests/observability/: test_observability.py
tests/pii_replacer/: fake_people_dataset.csv  test_detect.py  test_edit.py  test_filters.py  test_nemo_pii.py
tests/sdk/: test_builder.py  test_process_data.py  test_process_data_pii_regression.py
tests/smoke/: README.md  conftest.py  test_evaluation_cpu.py  test_full_pipeline_gpu.py  test_generation_cpu.py  test_nss_adapter_persistence_gpu.py  test_nss_generation_gpu.py  test_nss_resume_gpu.py  test_nss_structured_gen_gpu.py  test_nss_timeseries_gpu.py  test_nss_training_gpu.py  test_nss_unsloth_gpu.py  test_pii_replacement_cpu.py  test_training_cpu.py
tests/stub_datasets/: LICENSES.md  adobe-sampled.csv  clinc_oos.csv  doc_summaries.csv  dow_jones_index_group_size_8.csv  embedded_carriage_return.parquet  licenses.md  lmsys_chat_non_english_sample.jsonl  pems_sf_sample.csv  sample-patient-events-12groups-200-records.csv
tests/stub_tokenizer/: tokenizer.json  tokenizer_config.json
tests/training/: conftest.py  test_dp_accountant.py  test_huggingface_backend.py  (+2 more)
tools/: README.md  bootstrap_tools.sh  defs.sh  diff-lockfile.py  install_buildkit.sh  install_direnv.sh  install_gnutar.sh  install_jq.sh  install_osv_scanner.sh  install_uv.sh  sync-from-mr.sh  test_tool_install.sh
tutorials/: index.html
typings/: README.md
(+543 files in other folders)
