[project]
name = "nemo-safe-synthesizer"
dynamic = ["version"]
description = "Safe synthesizer"
readme = "README.md"
authors = [{ name = "NVIDIA", email = "nemo@nvidia.com" }]
requires-python = ">=3.11, <3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Software Development",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]


dependencies = [
  # "unsloth[cu128-torch291]==2025.12.4 requires datasets==4.3.0"
  # it only has a runtime error of course
  # so we need to pin it here
  "datasets==4.3.0",
  "faker>=20.0",
  "huggingface-hub>=0.34.4,<1",
  "pandas>=2.1.3",
  "pydantic[email]>=2.12.5",
  "pydantic-settings>=2.6.1",
  "pyyaml>=6.0.1",
  "jsonschema>=4.22.0",
  "rich>=14.1.0",
  "structlog>=25.4.0",
  "colorama>=0.4.6",
  "tqdm>=4.67.1",
  "setuptools>=80.0.0",

]

[dependency-groups]
dev = [
  "ipywidgets",
  "jsonpath-ng==1.5.3",
  "jupyterlab-widgets",
  "pandas-stubs>=2.1.3",
  "prek>=0.3.1",
  "packaging>=25.0.0",
  "typer>=0.15.0",
  "types-click",
  "types-colorama>=0.4.6",
  {include-group = "docs"},
  {include-group = "test"},
]

docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "griffe-pydantic",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-jupyter",
]

test = [

  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-env>=1.1.0",
  "pytest-subtests>=0.13.1",
  "pytest-timeout>=2.3.1",
  "pytest-xdist>=3.5.0",
]

[project.optional-dependencies]

engine = [
    "anyascii",
    "pycountry",
    "betterproto",
    "flashtext",
    "cached-property",
    "category-encoders",
    "dython",
    "dateparser",
    "faker",
    "huggingface-hub>=0.34.4,<1",
    "langchain-core",
    "json-repair",
    "matplotlib",
    "outlines>=1.0.0",
    "prv-accountant",
    "smart-open==7.0.5",
    "python-stdnum",
    "pandas>=2.1.3, <3",
    "plotly",
    "ratelimit",
    "scikit-learn",
    "range_regex>=0.1.0",
    "tenacity==9.1.4",
    "tiktoken>=0.7.0,<1.0",
    "tldextract",
    "tqdm>=4.67.1",
    "urllib3>=2.6.1",
    "wandb==0.23.1",
]


# the following are deps that have Torch as a dep. We keep them separated out from the engine deps
#
# it's a little annoying to have to split them up like this with redundant bits.
# it allows us to have a cpu and a cuda version of torch+deps
# and allow explicit installation of the cpu depset on linux.

cpu = [
  "accelerate",
  "bitsandbytes==0.49.1",
  "flashinfer-python==0.6.1; sys_platform=='linux'",
  "flashinfer-cubin==0.6.1; sys_platform=='linux'",
  "gliner",
  "kernels>=0.12.1",
  "peft",
  "opacus",
  "sentence-transformers",
  "torch==2.9.1; sys_platform == 'darwin'",
  "torch==2.9.1+cpu; sys_platform == 'linux'",
  "torchvision==0.24.1; sys_platform == 'darwin'",
  "torchvision==0.24.1+cpu; sys_platform == 'linux'",
  "torchao==0.15.0",
  "transformers==4.57.3",
  "triton>=2.0.0; sys_platform=='linux'",
  "trl>=0.23.0",
  "unsloth[cu128-torch291]==2025.12.4; sys_platform=='linux'",
  "unsloth_zoo==2025.12.4; sys_platform=='linux'",
  "vllm==0.15.0; sys_platform=='linux'",
]

cu128 = [
  "accelerate",
  "bitsandbytes==0.49.1",
  "flashinfer-python==0.6.1; sys_platform == 'linux'",
  "flashinfer-cubin==0.6.1; sys_platform == 'linux'",
  "flashinfer-jit-cache==0.6.1+cu128; sys_platform == 'linux'",
  "gliner",
  "kernels>=0.12.1",
  "nvidia-cublas-cu12; sys_platform == 'linux'",
  "nvidia-ml-py; sys_platform == 'linux'",
  "opacus",
  "peft",
  "sentence-transformers",
  "torch==2.9.1+cu128; sys_platform == 'linux'",
  "torch-c-dlpack-ext",
  "torchvision==0.24.1+cu128; sys_platform == 'linux'",
  "torchao==0.15.0; sys_platform == 'linux'",
  "transformers==4.57.3",
  "triton>=2.0.0; sys_platform == 'linux'",
  "trl>=0.23.0",
  "unsloth[cu128-torch291]==2025.12.4; sys_platform == 'linux'",
  "unsloth_zoo==2025.12.4; sys_platform == 'linux'",
  "vllm==0.15.0; sys_platform == 'linux'",
  "xformers==v0.0.33.post2; sys_platform == 'linux'",
]

# at some point, do per-subpackage dependencies

[tool.uv]
required-version = ">=0.9.14, <0.11.0" # Allow current 0.10.x line while staying below the next minor
cache-keys = [
  { file = "pyproject.toml" }, { git = { commit = true, tags = true } },
  { file = "uv.lock" }
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]
# xformers requires torch and more to be built.
no-build-isolation-package = ["xformers"]
dependency-metadata = [
      { name = "xformers", requires-dist = ["setuptools", "torch", "wheel"]},

  ]


override-dependencies = [
    "flashinfer-python==0.6.1; sys_platform != 'darwin'", # uv locking won't find the matching versions of flashinfer-python and -cubin without overriding
    "flashinfer-cubin==0.6.1; sys_platform != 'darwin'",  # perhaps because the published wheels have some wrong metadata
    "xgrammar>=0.1.32,<1.0.0",                            # CVE-2026-25048: override vllm's pin on 0.1.29
]

environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    # we have to add the following to make the right python packages for linux
    # for downstream use in our linux/arm64 docker images.
    # there's subtle differences in the naming convention on the python side
    # even though they are the same architecture, so we use aarch64
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

constraint-dependencies = ["torch==2.9.1", "regex==2025.07.34", "pandas<3"]



[tool.uv.sources]
  # here we specifiy the dep's source from which UV should attempt to resolve
  triton = { index = "pytorch-cu128", extra = "cu128" }
  xformers = { index = "pytorch-cu128", extra = "cu128" }
# for torch - we have a "cpu" dep set and "cu128" dep set, specified in the optional dependencies above
  torch = [
    { index = "pytorch-cpu", extra="cpu", marker = "sys_platform=='linux'"},
    { index = "pytorch-cu128", extra="cu128"},
  ]
  torchao = [
    { index = "pytorch-cu128", extra="cu128"},
  ]
  torchvision = [
    { index = "pytorch-cpu", extra="cpu" },
    { index = "pytorch-cu128", extra="cu128"},
  ]
  flashinfer-python = [
    { index = "flashinfer-jit-cache", marker = "sys_platform=='linux'", extra="cu128"},
  ]
  flashinfer-cubin = [
    { index = "flashinfer-jit-cache", marker = "sys_platform=='linux'", extra="cu128"},
  ]
  flashinfer-jit-cache = [
    { index = "flashinfer-jit-cache", marker = "sys_platform=='linux'", extra="cu128"},
  ]
  nvidia-cublas-cu12 = [
    { index = "pytorch-cu128" },
  ]
  nvidia-cuda-cupti-cu12 = [
    { index = "pytorch-cu128" },
  ]
  nvidia-cuda-nvrtc-cu12 = [
    { index = "pytorch-cu128" },
  ]
  nvidia-cuda-nvprof-cu12 = [
    { index = "pytorch-cu128" },
  ]

  nvidia-cuda-runtime-cu12 = [
    { index = "pytorch-cu128" },
  ]

  nvidia-cuda-nvml-cu12 = [
    { index = "pytorch-cu128" },
  ]


  nvidia-cudnn-cu12 = [
    { index = "pytorch-cu128" },
  ]
  nvidia-cusparse-cu12 = [
    { index = "pytorch-cu128" },
  ]
  nvidia-cusparselt-cu12 = [
    { index = "pytorch-cu128" },
  ]
  nvidia-nccl-cu12 = [
    { index = "pytorch-cu128" },
  ]
  nvidia-nvjitlink-cu12 = [
    { index = "pytorch-cu128" },
  ]
  nvidia-nvshmem-cu12 = [
    { index = "pytorch-cu128" },
  ]
  nvidia-nvtx-cu12 = [
    { index = "pytorch-cu128" },
  ]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# required for linux cpu - it's got a `+cpu` on the version
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "nv-shared-pypi-local"
url = "https://urm.nvidia.com/artifactory/api/pypi/nv-shared-pypi-local/simple"
explicit = true

[[tool.uv.index]]
name = "flashinfer-jit-cache"
url = "https://flashinfer.ai/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia-pypi-public"
url = "https://pypi.nvidia.com"
explicit = true


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
# Fallback when no git tag is available (e.g. shallow clone, Dependabot)
fallback-version = "0.0.0"
vcs = "git"
style = "pep440"


[tool.hatch.build.targets.wheel]

packages = ["src/nemo_safe_synthesizer"]
# Include license files in wheel distribution
artifacts = [
  "LICENSE",
  "THIRD_PARTY.md",
]


[project.scripts]
safe-synthesizer = "nemo_safe_synthesizer.cli.cli:cli"


[tool.ty.src]
# Below is a list of excluded directories from ty typechecks.
exclude = [
    ".uv_cache", # Cache Dir in CI
    "./docs/**/*.ipynb",
    "./src/nemo_safe_synthesizer/artifacts/",
    "./src/nemo_safe_synthesizer/pii_replacer/",
    "./tests/",
    "./tools/",
    "./script/slurm/nss_top.py",
]
